assets/css/main.css
/* ... */
html.dark body {
  --bg-color: #292e39;
}
@media (max-width: 991.98px) {
  html.dark {
    --header-bg-color: #171c28;
    --header-shadow: rgba(0, 0, 0, 0.2);
  }
}
@media (max-width: 767.98px) {
  html.dark {
    --auth-intro-bg: #171c28;
    --product-detail-bg: #292e39;
    --product-detail-info-bg: transparent;
    --product-detail-info-content-bg: #171c28;
    --breadcrumbs-bg: #171c28;
  }
}

html {
  --text-color: #1a162e;
  --icon-color: brightness(0) saturate(100%) invert(5%) sepia(26%) saturate(4471%) hue-rotate(234deg) brightness(95%)
      contrast(91%);
  --header-bg-color: #eeeeee;
  --top-act-group-bg-color: #fff;
  --top-act-group-shadow: rgba(237, 237, 246, 0.2);
  --top-act-group-seperate: #ededf6;
  --top-act-avatar-shadow: rgba(0, 0, 0, 0.08);
  --header-act-dropdown-bg: #fff;
  --header-act-dropdown-shadow: rgba(200, 200, 200, 0.4);
  --header-act-dropdown-border-color: #d2d1d6;
  --footer-bg-color: var(--header-bg-color);
  --dropdown-inner-bg-color: #fff;
  --dropdown-inner-shadow: rgba(200, 200, 200, 0.4);
  --dropdown-arrow-color: #fff;
  --top-menu-border-color: #d2d1d6;
  --slidebar-bg: #fff;
  --slidebar-shadow: rgba(200, 200, 200, 0.4);
  --heading-color: #1a162e;
  --cate-item-bg: #eee;
  --cate-item-thumb-bg: #fff;
  --cate-item-title-color: #000;
  --cate-item-desc-color: #1a162e;
  --filter-btn-color: #6c6c72;
  --filter-btn-bg: #fff;
  --product-card-bg: #fff;
  --product-card-shadow: rgba(237, 237, 246, 0.2);
  --like-btn-bg: #fff;
  --like-btn-shadow: rgba(124, 124, 124, 0.2);
  --product-card-color: #1a162e;
  --filter-form-bg: #fff;
  --filter-form-drop-shadow: rgba(200, 200, 200, 0.4);
  --form-label-text-color: #1a162e;
  --form-tag-bg: #f8f8fb;
  --filter-footer-bg: #fff;
  --form-select-dialog-shadow: rgba($color: #000000, $alpha: 0.15);
  --form-select-dialog-bg: #fff;
  --form-option-hover-bg: #ebebeb;
  --auth-intro-bg: #fafafd;
  --auth-intro-text-color: #1a162e;
  --auth-content-bg: #fff;
  --auth-content-text-color: #1a162e;
  --auth-content-text-input-color: #d2d1d6;
  --product-detail-bg: #fff;
  --product-detail-info-bg: #f6f6f6;
  --product-detail-info-content-bg: #fff;
  --product-detail-tag-bg: #ededf6;
  --search-bar-bg: #fff;
  --breadcrumbs-bg: #f6f6f6;
  --breadcrumbs-shadow: rgba(237, 237, 246, 0.2);
  --review-card-bg: #fafafd;
  --text-content-hr-bg: #ebebeb;
  --checkout-breadcrumbs-bg: #fff;
  --checkout-cart-info-bg: #fff;
  --checkout-cart-info-shadow: rgba(237, 237, 246, 0.2);
  --checkout-border-color: #d2d1d6;
  --checkout-gift-shadow: rgba(237, 237, 246, 0.2);
  --dialog-bg: #fff;
  --dialog-shadow: rgba(237, 237, 246, 0.2);
}
html body {
  --bg-color: #f6f6f6;
}
@media (max-width: 991.98px) {
  html {
    --header-bg-color: #ffffff;
    --header-shadow: rgba(237, 237, 246, 0.2);
  }
}
@media (max-width: 767.98px) {
  html {
    --cate-item-bg: #fff;
    --auth-intro-bg: #fff;
    --product-detail-bg: #fafafd;
    --product-detail-info-bg: #fff;
    --breadcrumbs-bg: #fff;
    --review-card-bg: #fff;
  }
}

.top-act__btn, .top-act__group, .top-act, .navbar__link, .navbar__list, .top-bar {
  display: flex;
  align-items: center;
}

.header {
  background-color: var(--header-bg-color);
}
@media (max-width: 991.98px) {
  .header {
    box-shadow: 0px 20px 60px 10px var(--header-shadow);
  }
}

.top-bar {
  padding: 30px 0px;
  z-index: 1;
  position: relative;
}
@media (max-width: 991.98px) {
  .top-bar {
    padding: 20px;
    justify-content: space-between;
  }
}
@media (max-width: 767.98px) {
  .top-bar {
    padding: 16px;
  }
}
@media (max-width: 991.98px) {
  .top-bar__logo {
    gap: 10px !important;
    margin-left: 40px;
  }
}
@media (max-width: 767.98px) {
  .top-bar__logo {
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    margin-left: 0px;
  }
}
@media (max-width: 991.98px) {
  .top-bar__logo-title {
    font-size: 1.8rem !important;
  }
}
@media (max-width: 991.98px) {
  .top-bar__logo-img {
    width: 24px;
  }
}

.navbar {
  margin-left: 129px;
}
@media (max-width: 1199.98px) {
  .navbar {
    margin-left: 28px;
  }
}
@media (max-width: 991.98px) {
  .navbar {
    position: fixed;
    inset: 0 50% 0 0;
    padding: 20px 0px;
    margin-left: 0;
    z-index: 9;
    background-color: var(--slidebar-bg);
    translate: -100%;
    transition: translate 0.5s;
    border-radius: 0px 20px 20px 0px;
  }
  .navbar.show {
    translate: 0%;
    box-shadow: 0px 40px 90px 20px var(--slidebar-shadow);
  }
  .navbar.show ~ .navbar__overlay {
    visibility: visible;
    opacity: 1;
  }
}
.navbar__overlay {
  visibility: hidden;
  opacity: 0;
}
@media (max-width: 991.98px) {
  .navbar__overlay {
    position: fixed;
    z-index: 8;
    inset: 0;
    background-color: rgba(0, 0, 0, 0.4);
    transition: opacity, visibility;
    transition-duration: 0.5s;
  }
}
@media (max-width: 575.98px) {
  .navbar {
    inset: 0 20% 0 0;
  }
}
.navbar__close-btn {
  display: none;
}
@media (max-width: 991.98px) {
  .navbar__close-btn {
    display: block;
    padding: 10px 40px;
  }
}
@media (max-width: 575.98px) {
  .navbar__close-btn {
    padding: 0px 20px 10px;
  }
}
@media (max-width: 991.98px) {
  .navbar__list {
    flex-direction: column;
    align-items: flex-start;
    height: calc(100% - 40px);
    overscroll-behavior: contain;
    overflow: auto;
  }
}
@media (max-width: 767.98px) {
  .navbar__list {
    height: calc(100% - 140px);
  }
}
.navbar__link {
  gap: 6px;
  padding: 0px 15px;
  height: 50px;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 1.46667;
}
@media (max-width: 991.98px) {
  .navbar__link {
    padding: 0px 40px;
    font-size: 1.6rem;
    line-height: 1.5;
    justify-content: space-between;
  }
}
@media (max-width: 575.98px) {
  .navbar__link {
    padding: 0px 20px;
    height: 44px;
  }
}
.navbar__arrow {
  margin-top: 3px;
}
@media (max-width: 991.98px) {
  .navbar__arrow {
    rotate: -90deg;
    transition: rotate 0.5s;
  }
}
/* ... */

